Facing fatal error with GCC-14 during compilation
Facing int-conversion fatal error after compiling with GCC-14 in common.c
error: passing argument 1 of 'eglGetDisplay' makes integer from pointer without a cast [-Wint-conversion] | egl->display = eglGetDisplay((void *)gbm->dev); | ^~~~~~~~~~~~~~~~ | | | void *