common: fix cast type in init_egl()

On some platforms, `EGLNativeDisplayType` is an int instead of
a pointer, in which case the void pointer will raise
a `-Wint-conversion`.

Let's cast it to the correct type directly.

Closes: https://gitlab.freedesktop.org/mesa/kmscube/-/issues/16